pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/pr14508.rkt
#;
(exn-pred 1)
#lang typed/racket

(: f (All (a ...) (-> a ... a (values a ... a))))
(define (f . xs)
  (apply values 3))
